now able to dl dataset and access it

--- a/Pages/Dataset.cshtml
+++ b/Pages/Dataset.cshtml
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Dataset Page</h1>
-    <p>This is the dataset page for @Model.Link.Replace(".", "/").</p>
+    <p>This is the dataset page for @Model.Link.</p>
+    <p>The dataset has @Model.RowCount rows.</p>
 </body>
 </html>
