page now shows correlation matrix

--- a/Pages/Dataset.cshtml
+++ b/Pages/Dataset.cshtml
@@ -11,5 +11,6 @@
     <h1>Dataset Page</h1>
     <p>This is the dataset page for @Model.Link.</p>
     <p>The dataset has @Model.RowCount rows.</p>
+    <img src="@Model.ImagePath" alt="Correlation Matrix">
 </body>
 </html>
