--- a/Pages/Dataset.cshtml
+++ b/Pages/Dataset.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/css/site.css">
 </head>
 <body>
-    <h1>Dataset Page</h1>
+    <h1>Dataset details</h1>
     <p>This is the dataset page for @Model.Link.</p>
     <p>The dataset has @Model.RowCount rows.</p>
     <img src="@Model.ImagePath" alt="Correlation Matrix">
