--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -4,12 +4,102 @@
     100% { opacity: 1; }
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
 .stars {
+    background: url('https://www.transparenttextures.com/patterns/stardust.png') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://www.transparenttextures.com/patterns/stardust.png');
-    background-size: cover;
+    opacity: 0.3;
     z-index: -1;
-    animation: blink 1s infinite;
+}
+
+h1 {
+    text-align: center;
+    padding: 20px 0;
+}
+
+p {
+    text-align: center;
+    padding: 0 20px 20px;
+}
+
+#searchBar {
+    display: block;
+    width: 80%;
+    max-width: 500px;
+    margin: 0 auto 20px;
+    padding: 10px;
+    font-size: 18px;
+    position: relative; /* this enables z-index for searchBar */
+    z-index: 1;
+}
+
+#searchButton {
+    display: block;
+    width: 80%;
+    max-width: 500px;
+    margin: 0 auto 20px;
+    padding: 10px;
+    font-size: 18px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+#searchButton:hover {
+    background-color: #444;
+}
+
+#searchResults {
+    display: none;
+    width: 90%; /* increase this if you want the div to take up more of the screen width */
+    max-width: 1000px; /* increase this if you want to allow the div to be wider */
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+table {
+    width: 100%;
+}
+table th, table td {
+    text-align: left;
+}
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    display: none; /* Hidden by default */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+#main-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
