--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -5,12 +5,83 @@
 }
 
 body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #f5f5f5;
+    color: #333;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
+}
+
+#main-content {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 80%;
+}
+#main-content > p:first-of-type {
+    font-weight: 600;
+}
+h1 {
+    color: #007BFF;
+    text-align: center;
+    padding: 20px 0;
+}
+
+p {
+    line-height: 1.6;
+    color: #666;
+    padding: 0 20px;
+}
+
+#searchBar, #searchButton {
+    display: block;
+    width: 80%;
+    max-width: 500px;
+    margin: 0 auto 20px;
+    padding: 10px;
+    font-size: 1.125rem;
+}
+
+#searchBar {
+    position: relative;
+    z-index: 1;
+    border: none;
+    border-bottom: 2px solid #007BFF;
+    margin-bottom: 20px;
+}
+
+#searchButton {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+#searchButton:hover {
+    background-color: #0056b3;
+}
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #007BFF;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    display: none;
+    margin: 0 auto;
 }
 
 .stars {
@@ -28,78 +99,119 @@ body {
     z-index: -1;
 }
 
-h1 {
-    text-align: center;
-    padding: 20px 0;
-}
-
-p {
-    text-align: center;
-    padding: 0 20px 20px;
-}
-
-#searchBar {
-    display: block;
-    width: 80%;
-    max-width: 500px;
-    margin: 0 auto 20px;
-    padding: 10px;
-    font-size: 18px;
-    position: relative; /* this enables z-index for searchBar */
-    z-index: 1;
-}
-
-#searchButton {
-    display: block;
-    width: 80%;
-    max-width: 500px;
-    margin: 0 auto 20px;
-    padding: 10px;
-    font-size: 18px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-}
-
-#searchButton:hover {
-    background-color: #444;
-}
-
 #searchResults {
     display: none;
-    width: 90%; /* increase this if you want the div to take up more of the screen width */
-    max-width: 1000px; /* increase this if you want to allow the div to be wider */
+    width: 90%;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
 table {
     width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 20px;
 }
+
 table th, table td {
     text-align: left;
-}
-.loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-    display: none; /* Hidden by default */
+    padding: 0 50px;
 }
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
-#main-content {
+
+input[type="text"], button {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+button {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+img {
+    max-width: 60%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+.dataset-page {
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.dataset-page h1 {
+    color: #333;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.dataset-page p {
+    color: #666;
+    line-height: 1.6;
+    padding: 0 20px;
+}
+
+.dataset-page a {
+    color: #007BFF;
+    text-decoration: none;
+}
+
+.dataset-page a:hover {
+    color: #0056b3;
+}
+
+.dataset-page figure {
+    width: 80%;
+    max-width: 500px;
+    margin: 20px auto;
+}
+
+.dataset-page img {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+.dataset-page figcaption {
+    font-size: 0.875rem;
+    color: #333;
+    text-align: center;
+    width: 50% !important;
+    margin: 0 auto !important;
+}
+
+.dataset-page table {
+    margin: 0 auto;
+    width: 80%;
+}
+
+.table-container {
+    display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+}
+
+.table-container table {
+    border-collapse: separate;
+    border-spacing: 20px;
+}
+
+.table-container table th, .table-container table td {
+    padding: 0 50px;
 }
